tests/negative/gold/global_self_ref_test.gold
tests/negative/global_self_ref_test.toit:5:21: error: Can't access global 'some_global' while initializing it
some_global /int := some_global + 1
                    ^~~~~~~~~~~
tests/negative/global_self_ref_test.toit:7:34: error: Can't access global 'some_global3' while initializing it
some_global3 /int := just_block: some_global3
                                 ^~~~~~~~~~~~
Compilation failed.
